--- a/taigenteikoku/package.json
+++ b/taigenteikoku/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "@tailwindcss/cli": "^4.1.17",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "tailwindcss": "^4.1.17"
   }
 }
